Small social button spacing fix

--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -332,7 +332,7 @@ code {
 }
 .page header .social .twitter-follow-button  {
 	float: right;
-	margin: 6px 20px 0 0px;
+	margin: 6px 20px;
 }
 .page .about {
 	background: #333333 url('../images/greybackground.png') repeat top left fixed;
